--- a/src/app/sections/blog/blog.component.html
+++ b/src/app/sections/blog/blog.component.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<section class="blog" id="blog"  appRevealOnScroll>
   <div class="blog__container">
     <div class="blog__content">
       <div class="blog__header">
