--- a/src/app/sections/blog/blog.component.scss
+++ b/src/app/sections/blog/blog.component.scss
@@ -2,6 +2,18 @@
 @use '../../../styles/abstracts/buttons' as buttons;
 
 .blog {
+  box-sizing: border-box;
+  opacity: 0;
+  transform: translateY(40px);
+  transition:
+    opacity 0.8s ease,
+    transform 0.8s ease;
+
+  &.is-visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  margin-bottom: 100px;
   &__container {
     box-sizing: border-box;
     @include containers.container();
