--- a/src/app/sections/contact/contact.component.html
+++ b/src/app/sections/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="contact">
+<section class="contact" id="contact" appRevealOnScroll>
   <div class="contact__container">
     <div class="contact__header">
       <h3 class="contact__label">CONTATO</h3>
@@ -73,4 +73,4 @@
       </div>
     </div>
   </div>
-</div>
+</section>
