--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero" appRevealOnScroll>
   <div class="hero__container">
     <!--<button class="hero__nav-button">-->
     <!--  <img src="images/icons/arrow-left.svg" alt="" />-->
