--- a/src/app/sections/method/method.component.html
+++ b/src/app/sections/method/method.component.html
@@ -1,4 +1,4 @@
-<section class="method">
+<section class="method" id="method" appRevealOnScroll>
   <div class="method__container">
     <div class="method__header">
       <h3 class="method__label">METODOLOGIA</h3>
