--- a/src/app/sections/services/services.component.html
+++ b/src/app/sections/services/services.component.html
@@ -1,4 +1,4 @@
-<section class="services">
+<section class="services" id="services" appRevealOnScroll>
   <div class="services__container">
     <div class="services__header">
       <h3 class="services__label">SERVIÇO</h3>
