--- a/src/app/sections/spaces/spaces.component.html
+++ b/src/app/sections/spaces/spaces.component.html
@@ -1,4 +1,4 @@
-<section class="spaces">
+<section class="spaces" id="spaces" appRevealOnScroll>
   <div class="spaces__header">
     <h3 class="spaces__label">ESPAÇO</h3>
     <h2 class="spaces__title">
