--- a/src/app/sections/team/team.component.html
+++ b/src/app/sections/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="team">
+<section class="team" id="team" appRevealOnScroll>
   <div class="team__container">
     <div class="team__header">
       <h3 class="team__label">EQUIPE</h3>
@@ -43,4 +43,4 @@
       emocional. Aqui, você encontra escuta, cuidado e suporte personalizado.
     </p>
   </div>
-</div>
+</section>
