--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-header [button]="navButton" [logo]="navLogo" [items]="navItems">
+<app-header
+  [button]="navButton"
+  [logo]="navLogo"
+  [items]="navItems"
+  (navigateToSection)="scrollToSection($event)"
+>
   <app-toggle-button
     [isDrawerActive]="isDrawerActive"
     (toggleDrawer)="onToggleDrawer()"
@@ -21,21 +26,13 @@
 ></div>
 <main class="main">
   <app-hero></app-hero>
-  <div style="height: 100px"></div>
   <app-services></app-services>
-  <div style="height: 100px"></div>
   <app-team></app-team>
-  <div style="height: 100px"></div>
   <app-method></app-method>
-  <div style="height: 100px"></div>
   <app-spaces></app-spaces>
-  <div style="height: 100px"></div>
   <app-blog></app-blog>
-  <div style="height: 100px"></div>
   <app-contact></app-contact>
-  <div style="height: 100px"></div>
 </main>
 <app-floating-button></app-floating-button>
 <app-footer></app-footer>
-<div style="height: 20px"></div>
 <router-outlet></router-outlet>
