--- a/src/app/sections/services/services.component.scss
+++ b/src/app/sections/services/services.component.scss
@@ -3,7 +3,17 @@
 
 .services {
   box-sizing: border-box;
+  opacity: 0;
+  transform: translateY(40px);
+  transition:
+    opacity 0.8s ease,
+    transform 0.8s ease;
 
+  &.is-visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  margin-bottom: 100px;
   &__container {
     box-sizing: border-box;
     @include containers.container();
