--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,3 +36,7 @@
 <app-floating-button></app-floating-button>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
+<!--
+npx ng build --configuration=production --base-href=/clinica-abertamente/
+npx angular-cli-ghpages --dir=dist/clinica-abertamente --branch=gh-pages
+-->
