--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -39,7 +39,7 @@
     <ul class="header__list" *ngIf="isMobile">
       <li class="header__item header__item--left">
         <a class="header__link" href="">
-          <img [src]="logo.src" [alt]="logo.alt" />
+          <img src="images/Logo.png" [alt]="logo.alt" style="width: 85px" />
         </a>
       </li>
       <li class="header__item header__item--right">
