--- a/src/app/layout/drawer/drawer.component.html
+++ b/src/app/layout/drawer/drawer.component.html
@@ -5,13 +5,22 @@
       class="drawer__item"
       [ngClass]="item.vClasses"
     >
-      <a class="drawer__link" href="#">
+      <a
+        class="drawer__link"
+        href="#"
+        (click)="$event.preventDefault(); onItemClick(item.name)"
+      >
         {{ item.name }}
       </a>
     </li>
+
     <li class="drawer__item drawer__item--emphasis">
-      <a class="drawer__link" href="#">
-        {{button.name}}
+      <a
+        class="drawer__link"
+        href="#"
+        (click)="$event.preventDefault(); onItemClick(button.name)"
+      >
+        {{ button.name }}
       </a>
     </li>
   </ul>
