--- a/src/app/sections/blog/blog.component.html
+++ b/src/app/sections/blog/blog.component.html
@@ -2,11 +2,11 @@
   <div class="blog__container">
     <div class="blog__content">
       <div class="blog__header">
-        <h3 class="blog__label">NOSSO BLOG</h3>
+        <h3 class="blog__label">BLOG</h3>
         <div class="blog__header-row">
           <h2 class="blog__title">Conteúdo mais recente publicado</h2>
           <button class="blog__button blog__button--primary-outline">
-            Blog
+            Ver mais
             <i class="fa-solid fa-arrow-right"></i>
           </button>
         </div>
