--- a/src/app/sections/services/services.component.html
+++ b/src/app/sections/services/services.component.html
@@ -1,10 +1,10 @@
 <section class="services" id="services" appRevealOnScroll>
   <div class="services__container">
     <div class="services__header">
-      <h3 class="services__label">SERVIÇO</h3>
+      <h3 class="services__label">SERVIÇOS</h3>
 
       <h2 class="services__title">
-        Nossos <span class="services__title--emphasis">Serviços</span>
+        Principais <span class="services__title--emphasis">Serviços</span>
       </h2>
     </div>
 
@@ -24,11 +24,9 @@
       desenvolvimento pessoal e profissional.
     </p>
     <div class="services__buttons">
-      <button class="services__button services__button--primary">
-        Conversar
-      </button>
       <button class="services__button services__button--primary-outline">
-        Ver todos
+        Ver mais
+        <i class="fa-solid fa-arrow-right"></i>
       </button>
     </div>
   </div>
