--- a/src/app/components/cards/post/post.component.scss
+++ b/src/app/components/cards/post/post.component.scss
@@ -34,6 +34,7 @@
   &__image-container {
     width: 100%;
     height: 100%;
+    max-height: 370px;
     border-radius: 14px;
     overflow: hidden;
   }
@@ -66,7 +67,7 @@
   &__title {
     font-size: 20px;
     font-weight: 420;
-    margin: 10px 0;
+    margin: 6px 0;
     color: #414141;
     transition: color 0.3s ease;
   }
