--- a/src/app/components/cards/service/service.component.scss
+++ b/src/app/components/cards/service/service.component.scss
@@ -3,6 +3,7 @@
 .service {
   overflow: hidden;
   position: relative;
+  //background-color: #f8f7f6;
   background-color: #f8f7f6;
   border: 1px solid #f1f0ee;
   box-sizing: border-box;
@@ -54,7 +55,6 @@
     width: 50px;
     height: 50px;
     border-radius: 16px;
-    background-color: #f7f7f5;
     border: 1px solid #ed794d;
     color: #ed794d;
     font-size: 24px;
@@ -145,7 +145,7 @@
     gap: 6px;
     font-size: 18px;
     font-weight: 500;
-    color: #1d6a5f;
+    color: #ed794d;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
