--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -8,11 +8,7 @@
           href="#"
           (click)="$event.preventDefault(); onButtonClick('Hero')"
         >
-          <img
-            src="images/Logo.png"
-            [alt]="logo.alt"
-            style="width: 85px; height: auto"
-          />
+          <img src="images/logo.png" [alt]="logo.alt" style="width: 85px" />
         </a>
       </li>
       <li *ngFor="let item of items; let i = index" class="header__item">
@@ -35,7 +31,7 @@
           href="#"
           (click)="$event.preventDefault(); onButtonClick(button.name)"
         >
-          {{ button.name }}
+          {{ button.name }} <i class="fa-solid fa-chevron-down"  style="margin-left: 2px"></i>
         </a>
       </li>
     </ul>
@@ -43,11 +39,7 @@
     <ul class="header__list" *ngIf="isMobile">
       <li class="header__item header__item--left">
         <a class="header__link" href="">
-          <img
-            src="images/Logo.png"
-            [alt]="logo.alt"
-            style="width: 85px; height: auto"
-          />
+          <img src="images/logo.png" [alt]="logo.alt" style="width: 85px" />
         </a>
       </li>
       <li class="header__item header__item--right">
