--- a/src/app/sections/spaces/spaces.component.scss
+++ b/src/app/sections/spaces/spaces.component.scss
@@ -57,27 +57,32 @@
     margin: 60px auto;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 20px;
+    gap: 14px;
 
     @media (max-width: 900px) {
       grid-template-columns: 1fr;
+      gap: 8px;
     }
   }
 
   &__main-visual {
     display: flex;
-    gap: 20px;
+    gap: 14px;
     width: 100%;
     height: 100%;
+    @media (max-width: 900px) {
+      gap: 8px;
+    }
   }
 
   &__side-visuals {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 14px;
 
     @media (max-width: 900px) {
       flex-direction: row;
+      gap: 8px;
     }
   }
 
@@ -89,7 +94,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 20px;
-    background-color: #f7f7f5;
+    background-color: #f8f7f6;
     border: 1px solid #f1f0ee;
   }
 
@@ -98,6 +103,7 @@
 
     @media (max-width: 900px) {
       height: 320px;
+      border-radius: 14px;
     }
   }
 
@@ -106,6 +112,7 @@
 
     @media (max-width: 900px) {
       height: 160px;
+      border-radius: 14px;
     }
   }
 
