--- a/src/styles/abstracts/_buttons.scss
+++ b/src/styles/abstracts/_buttons.scss
@@ -4,7 +4,7 @@
   $padding: 0 32px,
   $font-size: 18px,
   $width: fit-content,
-  $border-radius: 30px
+  $border-radius: 30px,
 ) {
   font-size: $font-size;
   min-height: $height;
@@ -19,7 +19,8 @@
   line-height: 18px;
   transition:
     background-color 0.6s ease-in-out,
-    transform 0.8s cubic-bezier(0.25, 1.5, 0.5, 1);
+    transform 0.8s cubic-bezier(0.25, 1.5, 0.5, 1),
+    min-width 0.4s ease-in-out;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   outline: none;
@@ -41,12 +42,12 @@
   border: $border;
 
   &:hover {
-    transform: $transform;
     color: $hover-text-color;
     background-color: $hover-bg;
   }
 
   &:active {
+    transform: $transform;
     background-color: $active-bg;
     transition: transform 0.08s ease-in-out;
   }
