--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'DM Sans';
-  src: url('/fonts/DM_Sans/DMSans-Italic-VariableFont.ttf') format('truetype');
+  src: url('../../public/fonts/DM_Sans/DMSans-Italic-VariableFont.ttf') format('truetype');
   font-weight: 100 1000;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'DM Sans';
-  src: url('/fonts/DM_Sans/DMSans-VariableFont.ttf') format('truetype');
+  src: url('../../public/fonts/DM_Sans/DMSans-VariableFont.ttf') format('truetype');
   font-weight: 100 1000;
   font-style: normal;
 }
@@ -15,9 +15,13 @@ body {
   position: relative;
   margin: 0;
   padding: 82px 0 0;
-  background-color: #ffffff;
+  background-color: white;
   font-family: 'DM Sans', sans-serif;
   box-sizing: border-box;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 
